@@ -7,6 +7,7 @@ import org.odpi.openmetadata.commonservices.ffdc.InvalidParameterHandler;
 import org.odpi.openmetadata.frameworks.connectors.ffdc.InvalidParameterException;
 import org.odpi.openmetadata.frameworks.connectors.ffdc.PropertyServerException;
 import org.odpi.openmetadata.frameworks.connectors.ffdc.UserNotAuthorizedException;
+import org.odpi.openmetadata.frameworks.openmetadata.types.OpenMetadataType;
 import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollectionstore.properties.instances.Classification;
 import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollectionstore.properties.instances.EntityDetail;
 import org.odpi.openmetadata.repositoryservices.connectors.stores.metadatacollectionstore.properties.instances.EntityProxy;
@@ -20,12 +21,10 @@ import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * DuplicateEntityIterator retrieves the list of entities that need to be processed for a specific entity.
  * The first entity returned is the principle entity or its consolidated replacement.  After that are the peer duplicates.
- *
  * Note: this class is not thread-safe - use only within a single-threaded request.
  */
 public class DuplicateEntityIterator
@@ -39,8 +38,6 @@ public class DuplicateEntityIterator
 
     private static final String statusPropertyName            = "statusIdentifier";
     private static final int    statusThreshold               = 1;
-
-    private static final String memento                       = "Memento";
 
     private static final Logger log = LoggerFactory.getLogger(DuplicateEntityIterator.class);
 
@@ -275,7 +272,7 @@ public class DuplicateEntityIterator
                                     /*
                                      * Filter out the peers that were already added to the list of unprocessed peers.
                                      */
-                                    if(!unprocessedPeers.stream().map(InstanceHeader::getGUID).collect(Collectors.toList()).contains(peerProxy.getGUID()))
+                                    if(!unprocessedPeers.stream().map(InstanceHeader::getGUID).toList().contains(peerProxy.getGUID()))
                                     {
                                         EntityDetail peerEntity = repositoryHandler.validateEntityGUID(userId,
                                                                                                        peerProxy.getGUID(),
@@ -337,7 +334,7 @@ public class DuplicateEntityIterator
                          */
                         if (repositoryHandler.isCorrectEffectiveTime(classification.getProperties(), effectiveTime))
                         {
-                            if (memento.equals(classification.getName()))
+                            if (OpenMetadataType.MEMENTO_CLASSIFICATION.typeName.equals(classification.getName()))
                             {
                                 /*
                                  * The Memento classification means that the element is logically deleted but kept active in the repository
